tests/errors/vis_private_err/vis_private_err.c
#error vis_private_err:1:1 Module not found: vis_private.vis_private_sub
